RESOLVED FIXED211412
[GTK4] Header bars no longer have title and subtitle properties
https://bugs.webkit.org/show_bug.cgi?id=211412
Summary [GTK4] Header bars no longer have title and subtitle properties
Adrian Perez
Reported 2020-05-04 16:59:27 PDT
There is no longer gtk_header_bar_set_[sub]title() after https://gitlab.gnome.org/GNOME/gtk/-/merge_requests/1807 has been merged. The alternative is to use a vertical box with two labels, assigning GTK_STYLE_CLASS_[SUB]TITLE styles to them.
Attachments
Patch (3.59 KB, patch)
2020-05-04 17:15 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2020-05-04 17:15:57 PDT
EWS
Comment 2 2020-05-04 21:42:31 PDT
Committed r261144: <https://trac.webkit.org/changeset/261144> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398438 [details].
Note You need to log in before you can comment on or make changes to this bug.