[GTK4] Header bars no longer have title and subtitle properties https://bugs.webkit.org/show_bug.cgi?id=211412

Reviewed by Carlos Garcia Campos.

No new tests needed.

* UIProcess/Inspector/gtk/WebKitInspectorWindow.cpp: For GTK4 use a vertical
box as title widget, with two labels acting as title and subtitle.
(webkit_inspector_window_init):
(webkitInspectorWindowSetSubtitle):


Canonical link: https://commits.webkit.org/224317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261144 268f45cc-cd09-0410-ab3c-d52691b4dbfc